--- a/config/database.yml
+++ b/config/database.yml
@@ -19,9 +19,8 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  user: fbduell
+  adapter: mysql2
+  database: fachbereichsduell_production
+  username: fbduell
   password: 2fd2rg
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+  host: localhost
