--- a/config/database.yml
+++ b/config/database.yml
@@ -23,4 +23,4 @@ production:
   database: fachbereichsduell_production
   username: fbduell
   password: 2fd2rg
-  host: localhost
+  host: testate.informatik.uos.de
